--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -14,7 +14,7 @@
 		}
 	},
 	"header": {
-		"name": "pack.name",
+		"name": "Manalistas",
 		"description": "pack.description",
 		"min_engine_version": [
 			1,
